[build-system]
requires = ["setuptools", "wheel", "poetry", "pyyaml"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "bump_helm_chart_version"
version = "1.1.3"
description = "Bump helm chart version if the /templates folder has changes'"
authors = ["Youssef Hussein <youssef@doubl.tech>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
bump-chart-version = "bump_helm_chart_version.bump_chart_version:main"
