# setup.cfg
[metadata]
name = Bump helm chart version
description = Bump helm chart version if the /templates folder has changes
version = 1.0.0
author = Youssef Hussein
author_email = youssef@doubl.tech
license = MIT
url = https://youssefhussein.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    bump-chart-version = bump_helm_chart_version.bump_chart_version:main
